@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: tkInt.decls,v 1.57 2009/06/29 14:35:01 das Exp $
+# RCS: @(#) $Id: tkInt.decls,v 1.58 2009/12/02 21:16:44 nijtmans Exp $
 
 library tk
 
@@ -781,6 +781,13 @@ declare 34 win {
 }
 declare 35 win {
     int TkWinGetPlatformTheme(void)
+}
+
+# new for 8.6
+
+declare 36 win {
+    LRESULT CALLBACK TkWinChildProc(HWND hwnd,
+	    UINT message, WPARAM wParam, LPARAM lParam)
 }
 
 ################################
